<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Menu"
    android:background="@color/splash_back">

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/shrikhand"
        android:text="@string/app_name"
        android:textSize="40sp"
        android:textColor="@color/text"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="120dp" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="-40dp"
        android:padding="5dp" >

        <Button
            android:id="@+id/ai_btn"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:background="@drawable/primary_btn"
            android:text="@string/ai_btn"
            android:textSize="16sp"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/human_btn"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:background="@drawable/primary_btn"
            android:text="@string/human_btn"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_marginTop="80dp"/>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>