<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Form"
    android:background="@color/app_back">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/shrikhand"
        android:text="@string/app_name"
        android:textSize="40sp"
        android:textColor="@color/text2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="120dp" />
    
    <EditText
        android:id="@+id/edit1"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:paddingHorizontal="10dp"
        android:fontFamily="@font/racing_sans_one"
        android:textColor="@color/purple_500"
        android:maxLength="20"
        android:inputType="textPersonName"
        android:drawableStart="@drawable/x_icon"
        android:drawableTint="@color/purple_500"
        android:drawablePadding="6dp"
        android:background="@drawable/ic_back"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="80dp" />

    <EditText
        android:id="@+id/edit2"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:paddingHorizontal="10dp"
        android:fontFamily="@font/racing_sans_one"
        android:textColor="#E8125B"
        android:maxLength="20"
        android:inputType="textPersonName"
        android:drawableStart="@drawable/o_icon"
        android:drawableTint="#E8125B"
        android:drawablePadding="6dp"
        android:background="@drawable/ic_back"
        app:layout_constraintTop_toBottomOf="@+id/edit1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="80dp" />

    <TextView
        android:id="@+id/label1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/raleway_bold"
        android:text="@string/player1"
        android:textColor="@color/purple_500"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/edit1"
        app:layout_constraintStart_toStartOf="@id/edit1"/>

    <TextView
        android:id="@+id/label2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/raleway_bold"
        android:text="@string/player2"
        android:textColor="#E8125B"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/edit2"
        app:layout_constraintStart_toStartOf="@id/edit2"/>

    <Button
        android:id="@+id/submit"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:background="@drawable/primary_btn"
        android:fontFamily="@font/raleway_bold"
        android:text="Start Game"
        android:textSize="16sp"
        android:shadowColor="@color/purple_500"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit2"
        android:layout_marginTop="60dp" />

</androidx.constraintlayout.widget.ConstraintLayout>